# i3s-slpk-inspector

./: .gitignore  README.md  pyproject.toml
slpk_diagnoser/: __init__.py  __main__.py  cli.py  cloud_storage.py  consistency_checker.py  engine.py  geometry_checker.py  i3s_mapping.py  lod_checker.py  logger.py  node_parser.py  nodepage_parser.py  package_reader.py  report_writer.py  scene_layer_parser.py  scoring.py  spatial_checker.py  texture_checker.py
tests/: test_json_resource_support.py
