[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "slpk-diagnoser"
version = "0.1.0"
description = "SLPK / I3S 场景层包质量诊断工具"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
slpk-diagnose = "slpk_diagnoser.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["slpk_diagnoser*"]
